# nmockdrunk-mcp

./: .gitignore  ARCHITECTURE.md  AUTO_REFRESH_PLAN.md  FUTURE_IDEAS.md  README.md  SPEC.md  USER_GUIDE.md  jDocMunch_Whitepaper_Final_v2.docx  pyproject.toml  todo.md
docs/plans/: 2026-03-06-docs-rebrand-and-update.md
src/jdocmunch_mcp/: __init__.py  security.py  server.py
src/jdocmunch_mcp/auto_refresh/: __init__.py  _scan.py  _types.py  git_detector.py  incremental.py  mtime_detector.py  refresh_manager.py  summarization_queue.py
src/jdocmunch_mcp/parser/: asciidoc_parser.py  html_parser.py  markdown_parser.py  rst_parser.py
src/jdocmunch_mcp/storage/: doc_store.py  token_tracker.py
src/jdocmunch_mcp/summarizer/: batch_summarize.py
src/jdocmunch_mcp/tools/: _constants.py  get_document_outline.py  get_repo_overview.py  get_section.py  get_sections.py  index_local.py  index_repo.py  search_sections.py
tests/: test_auto_refresh.py  test_parser.py  test_security.py  test_server.py  test_storage.py  test_summarizer.py  test_tools.py
