[project]
name = "jdocmunch-mcp"
version = "0.1.1"
description = "Token-efficient MCP server for structured documentation retrieval via section-level indexing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<1.10.0",
    "httpx>=0.27.0",
    "pathspec>=0.12.0",
]

[project.scripts]
jdocmunch-mcp = "jdocmunch_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jdocmunch_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
